--- a/styles/chmduquesne.css
+++ b/styles/chmduquesne.css
@@ -35,21 +35,21 @@ h2 {
     /* This is called "sectioncolor" in the ConTeXt stylesheet. */
     color: #397249;
 }
-/* There is a bar just before each category */
+/* There is a bar just before each category 
 h2:before {
     content: "";
     display: inline-block;
     margin-right:1%;
     width: 16%;
     height: 10px;
-    /* This is called "rulecolor" in the ConTeXt stylesheet. */
+    /* This is called "rulecolor" in the ConTeXt stylesheet. 
     background-color: #9CB770;
 }
 h2:hover {
     background-color: #397249;
     color: #FFFFFF;
     text-shadow: 1px 1px 1px #333;
-}
+} */
 
 /* Definitions */
 dt {
